--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+		  <groupId>org.modelmapper</groupId>
+		  <artifactId>modelmapper-examples</artifactId>
+		  <version>2.4.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
